exports[`getChildrenMap should create a keyed object based on props.key 1`] = `
Array [
  Array [
    "foo",
    Object {
      "props": Object {
        "key": "foo",
      },
      "tag": "div",
    },
  ],
  Array [
    "bar",
    Object {
      "props": Object {
        "key": "bar",
      },
      "tag": "div",
    },
  ],
]
`;

exports[`getChildrenMap should create a keyed object based on props.key when keys are numbers 1`] = `
Array [
  Array [
    2,
    Object {
      "props": Object {
        "key": 2,
      },
      "tag": "div",
    },
  ],
  Array [
    1,
    Object {
      "props": Object {
        "key": 1,
      },
      "tag": "div",
    },
  ],
]
`;

exports[`getChildrenMap should create a keyed object even if tag is all sorts of types 1`] = `
Array [
  Array [
    "div-1",
    Object {
      "props": Object {
        "key": "div-1",
      },
      "tag": "div",
    },
  ],
  Array [
    "testTest-1",
    Object {
      "props": Object {
        "key": "testTest-1",
      },
      "tag": [Function],
    },
  ],
  Array [
    "__METAL_CSS_TRANSISIONS__-1",
    Object {
      "props": Object {
        "key": "__METAL_CSS_TRANSISIONS__-1",
      },
      "tag": Object {
        "foo": "bar",
      },
    },
  ],
  Array [
    "__METAL_CSS_TRANSISIONS__-2",
    Object {
      "props": Object {
        "key": "__METAL_CSS_TRANSISIONS__-2",
      },
    },
  ],
]
`;
